<resources>
    <string name="app_name">My Cook Book</string>
    <string name="title_search_text">Поиска рецептов</string>
    <string name="my_recipes">Мои рецепты</string>
    <string name="quit">Выход</string>
    <string name="my_cooking_book_text">МОЯ КУЛИНАРНАЯ\n КНИГА</string>
    <string name="home">Главная</string>
    <string name="notes">Заметки</string>
    <string name="search">Поиск</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="et_enter_ingr">Введите ингредиент</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="notes_fragment">Мои рецепты</string>
    <string name="add_recipe">СОЗДАТЬ НОВЫЙ РЕЦЕПТ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adding_a_recipe">ДОБАВЛЕНИЕ РЕЦЕПТА</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_add">Добавить</string>
    <string name="information_text">Информация</string>
    <string name="info_home">- Просмотрите информацию об этом приложении, нажав на соответствующий значок.\n\n</string>
    <string name="info_search">- Введите ингредиент (название блюда), нажмите на кнопку "Добавить", добавленный вами ингредиент (название) появится в отдельном поле.\n\n- Нажмите на кнопку "Поиск", чтобы выполнить поиск по добавленным ингредиентам (названиям)..\n\n- Чтобы удалить добавленные ингредиенты (названия), нажмите на соответствующую кнопку.\n\n-
Когда вы нажмете на рецепт, вы сможете ознакомиться с ним более подробно. Чтобы ознакомиться с инструкцией к рецепту, перейдите по ссылке.\n\n</string>
    <string name="info_notes">- Вам будет представлен список заметок (рецептов).\n\n- Чтобы просмотреть заметку, нажмите на соответствующую заметку.\n\n- Нажав на кнопку "Создать новый рецепт", создайте заметку, заполнив поля.\n\n</string>
    <string name="desc_info">  Приложение "Моя кулинарная книга" - это приложение, которое поможет вам выучить различные рецепты, а также сохранить ваши собственные рецепты\n</string>
    <string name="develop_info">  Разработано Дешиным Михаилом и Гороховым Ильей</string>
    <string name="note_name">Название заметки</string>
    <string name="text">текст</string>
    <string name="ingredients1">Ингредиенты:</string>
    <string name="ingreds">ингредиенты</string>
    <string name="instruction">Инструкции</string>
    <string name="how_to_prepare">как приготовить</string>
    <string name="back">назад</string>
    <string name="delete">удалить</string>
    <string name="recipe_name">название рецепта</string>
    <string name="ingredients">ингредиенты</string>
    <string name="add">Добавить</string>
    <string name="ingredient_item">Ingredient</string>
    <string name="update">изменить</string>
    <string name="updateRecipe">РЕДАКТИРОВАНИЕ РЕЦЕПТА</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="choose_img">выбрать фото</string>
</resources>