<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.notes.NoteFragment"
    android:orientation="vertical"
    android:background="#FFFFDD76"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/text"
        android:textSize="30sp"
        android:textColor="#000000"
        android:id="@+id/note_name"/>

    <ImageView
        android:layout_marginStart="15dp"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/dish_picture"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/ingredients1"
        android:layout_marginStart="15dp"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/ingreds"
        android:textSize="20sp"
        android:id="@+id/note_ingreds"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/instruction"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/how_to_prepare"
        android:textSize="20sp"
        android:id="@+id/note_instruction"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/back"
            android:id="@+id/toPrevFragBtn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:text="@string/delete"
            android:id="@+id/deleteBtn"/>

    </LinearLayout>



</LinearLayout>