<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.notes.CreatingRecipeFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/beige">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/adding_a_recipe"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/image_recipe_note"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/addRecipeImg"/>


    <EditText
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

    <EditText
        android:id="@+id/ingreds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingreds"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

    <EditText
        android:id="@+id/how_to_prepare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/how_to_prepare"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

    <Button
        android:id="@+id/create_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_add" />

</LinearLayout>