<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/beige">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_info_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/information_text"
            android:textStyle="bold|italic"
            android:textSize="24sp"
            android:textColor="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desc_info_text"
            android:layout_marginStart="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/title_info_text"
            app:layout_constraintStart_toStartOf="@+id/title_info_text"
            app:layout_constraintEnd_toEndOf="@+id/title_info_text"
            android:text="@string/desc_info"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_home"
            app:layout_constraintTop_toBottomOf="@+id/desc_info_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/image_home"
                android:src="@drawable/ic_baseline_home_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_home"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_search"
            app:layout_constraintTop_toBottomOf="@+id/linear_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/image_search"
                android:src="@drawable/ic_baseline_search_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_search"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_notes"
            app:layout_constraintTop_toBottomOf="@+id/linear_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/image_notes"
                android:src="@drawable/ic_baseline_edit_note_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_notes"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/develop_info_text"
            android:layout_marginStart="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/linear_notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/develop_info"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>